# MeloTTS.C

./: .gitignore  CMakeLists.txt  Makefile  README.md  THIRD_PARTY.md  requirements-g2p.txt  requirements.txt
.github/workflows/: windows-build.yml
config/: english_onnx.example.ini
demo/: melotts_cli.cpp  melotts_stream_cli.cpp
include/: melotts_engine.h
lexicons/: programming_terms.lexicon
src/: melotts_engine.cpp
tools/: build_g2p_lexicon.py  export_english_onnx.py
tools/melotts_py/: attentions.py  models.py  modules.py  utils.py
